# docs/swagger.yaml
@@ -1,5 +1,22 @@
 basePath: /api/v1
 definitions:
+  domains.CratePostDTO:
+    properties:
+      category:
+        type: string
+      content:
+        type: string
+      image:
+        items:
+          type: string
+        type: array
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+    type: object
   domains.EmailCahangeDTO:
     properties:
       email:
@@ -80,6 +97,7 @@ definitions:
         enum:
         - male
         - female
+        - not
         - other
         example: male
         type: string
@@ -105,6 +123,25 @@ definitions:
     - last_name
     - password
     type: object
+  domains.UpdatePostDTO:
+    properties:
+      category:
+        type: string
+      content:
+        type: string
+      id:
+        type: string
+      image:
+        items:
+          type: string
+        type: array
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+    type: object
   error_handler.BaseResponse:
     properties:
       data: {}
@@ -115,6 +152,25 @@ definitions:
         type: string
       status_code:
         type: integer
+    type: object
+  social_domain.Post:
+    properties:
+      body:
+        type: string
+      category_id:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      user_id:
+        type: string
     type: object
   user_domain.User:
     properties:
@@ -134,9 +190,10 @@ definitions:
       gender:
         enum:
         - male
+        - female
+        - not
+        - other
         example: male
-        type: string
-      id:
         type: string
       lang:
         description: "\U0001F918"
@@ -154,6 +211,8 @@ definitions:
         type: boolean
       password:
         type: string
+      updated_at:
+        type: string
     required:
     - firstname
     - gender
@@ -167,6 +226,138 @@ info:
   title: API Service
   version: v1
 paths:
+  /private/post:
+    get:
+      consumes:
+      - application/json
+      description: Get posts
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/error_handler.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/social_domain.Post'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get posts
+      tags:
+      - Post
+    post:
+      consumes:
+      - application/json
+      description: Create post
+      parameters:
+      - description: Post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/domains.CratePostDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/error_handler.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/domains.CratePostDTO'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Create post
+      tags:
+      - Post
+    put:
+      consumes:
+      - application/json
+      description: Update post
+      parameters:
+      - description: Post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/domains.UpdatePostDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/error_handler.BaseResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update post
+      tags:
+      - Post
+  /private/post/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete post
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/error_handler.BaseResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete post
+      tags:
+      - Post
+    get:
+      consumes:
+      - application/json
+      description: Get post
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/error_handler.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/social_domain.Post'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get post
+      tags:
+      - Post
   /private/user/enable/{key}:
     get:
       consumes:
@@ -479,6 +670,6 @@ paths:
 securityDefinitions:
   ApiKeyAuth:
     in: cookie
-    name: session_id
+    name: session_id11
     type: apiKey
 swagger: "2.0"
