# internal/delivery/http/v1/private/post.go
@@ -89,12 +89,13 @@ func (h *PrivateHandler) DeletePost(c *fiber.Ctx) error {
 // @Produce json
 // @Security ApiKeyAuth
 // @Param id path string true "Post ID"
-// @Success 200 {object} error_handler.BaseResponse{data=social_domain.Post}
+// @Success 200 {object} error_handler.BaseResponse{data=domain.InPostDTO}
 // @Router /private/post/{id} [get]
 func (h *PrivateHandler) GetPost(c *fiber.Ctx) error {
 	postID := c.Params("id")
 	newPostID := uuid.MustParse(postID)
-	post, err := h.coreAdapter.SocialServices().PostsService().GetPost(c.Context(), newPostID)
+	userID := c.Locals("user").(domains.SessionDTO).ID
+	post, err := h.coreAdapter.SocialServices().PostsService().GetPost(c.Context(), newPostID, *userID)
 	if err != nil {
 		return err
 	}
